update tracking visualization

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -47,6 +47,8 @@
     "    overlay_tracks_on_video,\n",
     "    run_tracking,\n",
     "    visualize_detections_from_video,\n",
+    "    output_tracked_bboxes_csv,\n",
+    "    plot_tracks_at_frame_bbox_from_video\n",
     ")\n",
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
@@ -286,7 +288,7 @@
     "# default parameters for alignment\n",
     "\n",
     "frame_size = (640, 480)  # Default frame size\n",
-    "max_frames = 10  # Process all frames by default\n",
+    "max_frames = None  # Process all frames by default\n",
     "warp_to = \"rgb\"  # Default warp to rgb, thermal is changing, not rgb\n",
     "rotation_angle = 0.0  # Default rotation angle\n",
     "skip_homography = False  # Default to not skip homography\n",
@@ -363,6 +365,7 @@
    "outputs": [],
    "source": [
     "# Detection and tracking\n",
+    "model_weights = LOCAL_DOWNLOAD_DIR / \"model\" / \"yolo11_weights.pt\"\n",
     "print(\"Running detection and tracking...\")\n",
     "for camera in camera_numbers:\n",
     "    print(f\"Running detection and tracking on: thermal_{camera}\")\n",
@@ -370,7 +373,7 @@
     "    # Define paths for the thermal video and model inference\n",
     "    thermal_video_path = (\n",
     "        LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
     "        / f\"warped_thermal_{camera}.mp4\"\n",
     "    )\n",
@@ -380,16 +383,20 @@
     "\n",
     "    # Run local_model_inference script\n",
     "    try:\n",
-    "        output_csv_path = (\n",
-    "            LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / \"output_results.csv\"\n",
+    "        detect_csv = (\n",
+    "            LOCAL_PROCESSED_DIR\n",
+    "            / \"aligned_frames\"\n",
+    "            / f\"thermal_{camera}\"\n",
+    "            / \"output_results.csv\"\n",
     "        )\n",
     "        output_video_path = (\n",
     "            LOCAL_PROCESSED_DIR\n",
-    "            / \"aligned\"\n",
+    "            / \"aligned_frames\"\n",
     "            / f\"thermal_{camera}\"\n",
     "            / \"annotated_warped_thermal.mp4\"\n",
     "        )\n",
-    "        infer_with_yolo(thermal_video_path)\n",
+    "        infer_with_yolo(thermal_video_path, model_weights, str(detect_csv))\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
     "        continue\n",
@@ -400,7 +407,7 @@
     "\n",
     "    tracked_csv = (\n",
     "        LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
     "        / f\"thermal_{camera}_tracks.csv\"\n",
     "    )\n",
@@ -408,12 +415,25 @@
     "        print(f\"Tracking CSV not found for camera {camera}. Skipping visualization.\")\n",
     "        continue\n",
     "\n",
+    "    # save the joint csv with bounded tracks \n",
+    "    joint_csv = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"output_tracked_bboxes_{camera}.csv\"\n",
+    "    )\n",
+    "    output_tracked_bboxes_csv(\n",
+    "    track_csv=tracked_csv,\n",
+    "    detect_csv=detect_csv,\n",
+    "    output_csv=joint_csv,\n",
+    "    iou_threshold=0.2  # Lower threshold if tracks are not perfectly centered\n",
+    ")\n",
     "    # Visualization\n",
     "    visualize_detections_from_video(\n",
     "        csv_path=tracked_csv,\n",
     "        video_path=thermal_video_path,\n",
     "        output_video_path=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
     "        / f\"visualized_thermal_{camera}.mp4\",\n",
     "    )\n",
@@ -421,14 +441,14 @@
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
     "        frame_dir=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
     "        / \"annotated_frames\",\n",
     "        output_video=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
     "        / f\"overlayed_tracks_{camera}.mp4\",\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
