--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Full Tracker: Download, Process, and Upload Data\n",
-    "This notebook demonstrates the full pipeline for handling raw data:\n",
+    "This notebook demonstrates the full pipeline for handling raw rgb. and .csq data:\n",
     "1. Download data from a cloud bucket.\n",
     "2. Process the data (e.g., align videos, run detection, and tracking).\n",
     "3. Upload the processed data back to the cloud bucket."
@@ -158,8 +158,8 @@
    "outputs": [],
    "source": [
     "# Download Data from Cloud Bucket\n",
-    "SESSION_FOLDER = \"2024_02_06-session_0001\"\n",
-    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"  # Update with data folder (session)\n",
+    "SESSION_FOLDER = \"2024_02_06-session_0001\"  # Update with data folder (session)\n",
+    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\" \n",
     "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")\n",
     "\n",
     "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\", get_project_root())\n",
@@ -354,7 +354,7 @@
    "id": "0233241c",
    "metadata": {},
    "source": [
-    "#### Object detection and alignment"
+    "#### Object detection and tracking"
    ]
   },
   {
@@ -365,8 +365,7 @@
    "outputs": [],
    "source": [
     "# Detection and tracking\n",
-    "model_weights = LOCAL_DOWNLOAD_DIR / \"model\" / \"yolo11_weights.pt\"\n",
-    "print(\"Running detection and tracking...\")\n",
+    "print(\"Running detection...\")\n",
     "for camera in camera_numbers:\n",
     "    print(f\"Running detection and tracking on: thermal_{camera}\")\n",
     "\n",
@@ -375,19 +374,26 @@
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"warped_thermal_{camera}.mp4\"\n",
+    "        / f\"warped_thermal_adjusted.mp4\"\n",
     "    )\n",
     "    if not thermal_video_path.exists():\n",
     "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
     "        continue\n",
     "\n",
-    "    # Run local_model_inference script\n",
+    "    rgb_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"cropped_rgb_adjusted.mp4\"\n",
+    "    )\n",
+    "\n",
+    "        # Run local_model_inference script\n",
     "    try:\n",
     "        detect_csv = (\n",
     "            LOCAL_PROCESSED_DIR\n",
     "            / \"aligned_frames\"\n",
     "            / f\"thermal_{camera}\"\n",
-    "            / \"output_results.csv\"\n",
+    "            / f\"detections_{camera}.csv\"\n",
     "        )\n",
     "        output_video_path = (\n",
     "            LOCAL_PROCESSED_DIR\n",
@@ -395,48 +401,97 @@
     "            / f\"thermal_{camera}\"\n",
     "            / \"annotated_warped_thermal.mp4\"\n",
     "        )\n",
-    "        infer_with_yolo(thermal_video_path, model_weights, str(detect_csv))\n",
-    "        \n",
+    "        checkpoint_path = LOCAL_DOWNLOAD_DIR / \"yolo11_weights.pt\"  # Update with your model path\n",
+    "\n",
+    "        infer_with_yolo(\n",
+    "            video_path=thermal_video_path, model_path=checkpoint_path, output_csv_path=detect_csv\n",
+    "        )\n",
+    "        print(f\"Object detection completed for camera {camera}. Results saved to {detect_csv}.\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
     "        continue\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71153357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#running tracking\n",
+    "for camera in camera_numbers:\n",
     "\n",
-    "    # Run tracking\n",
-    "    print(f\"Running tracking on: thermal_{camera}\")\n",
-    "    run_tracking(LOCAL_PROCESSED_DIR, \"thermal\", camera)\n",
-    "\n",
-    "    tracked_csv = (\n",
+    "    # Define paths for the thermal video and model inference\n",
+    "    thermal_video_path = (\n",
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"thermal_{camera}_tracks.csv\"\n",
+    "        / f\"warped_thermal_adjusted.mp4\"\n",
     "    )\n",
-    "    if not tracked_csv.exists():\n",
-    "        print(f\"Tracking CSV not found for camera {camera}. Skipping visualization.\")\n",
+    "    if not thermal_video_path.exists():\n",
+    "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
     "        continue\n",
     "\n",
-    "    # save the joint csv with bounded tracks \n",
-    "    joint_csv = (\n",
+    "    rgb_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"cropped_rgb_adjusted.mp4\"\n",
+    "    )\n",
+    "    if not rgb_video_path.exists():\n",
+    "        print(f\"RGB video not found for camera {camera}. Skipping...\")\n",
+    "        continue\n",
+    "\n",
+    "    # Check if the detection CSV exists\n",
+    "    detect_csv = (\n",
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"output_tracked_bboxes_{camera}.csv\"\n",
+    "        / f\"detections_{camera}.csv\"\n",
     "    )\n",
-    "    output_tracked_bboxes_csv(\n",
-    "    track_csv=tracked_csv,\n",
-    "    detect_csv=detect_csv,\n",
-    "    output_csv=joint_csv,\n",
-    "    iou_threshold=0.2  # Lower threshold if tracks are not perfectly centered\n",
-    ")\n",
-    "    # Visualization\n",
+    "    if not detect_csv.exists():\n",
+    "        print(f\"Detection CSV not found for camera {camera}. Skipping tracking.\")\n",
+    "        continue\n",
+    "    # Visualize detections on the thermal and RGB videos\n",
+    "    # visualization\n",
     "    visualize_detections_from_video(\n",
-    "        csv_path=tracked_csv,\n",
+    "        csv_path=detect_csv,\n",
     "        video_path=thermal_video_path,\n",
     "        output_video_path=LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
     "        / f\"visualized_thermal_{camera}.mp4\",\n",
     "    )\n",
+    "    # visualization\n",
+    "    visualize_detections_from_video(\n",
+    "        csv_path=detect_csv,\n",
+    "        video_path=rgb_video_path,\n",
+    "        output_video_path=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"visualized_rgb_{camera}.mp4\",\n",
+    "    )\n",
+    "    # Run tracking\n",
+    "    print(f\"Running tracking on: camera {camera}\")\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR/'aligned_frames', \"thermal\", camera)\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR/'aligned_frames', \"rgb\", camera)\n",
+    "    tracked_csv = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"rgb_{camera}_tracks.csv\"\n",
+    "    )\n",
+    "    if not tracked_csv.exists():\n",
+    "        print(f\"Tracking CSV not found for camera {camera}. Skipping visualization.\")\n",
+    "        continue\n",
+    "    # Output tracked bounding boxes to CSV\n",
+    "    output_tracked_bboxes_csv(\n",
+    "    track_csv=tracked_csv,\n",
+    "    detect_csv=detect_csv,\n",
+    "    output_csv=Path(LOCAL_PROCESSED_DIR / f\"aligned_frames/rgb_{camera}/tracked_bboxes_{camera}.csv\"),\n",
+    "    iou_threshold=0.2 ) # Lower threshold if tracks are not centered\n",
     "    print(f\"Visualizing tracks for rgb camera {camera}...\")\n",
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
@@ -456,7 +511,7 @@
    "id": "68872063",
    "metadata": {},
    "source": [
-    "### Push processed files"
+    "### Optional: Push processed files"
    ]
   },
   {
@@ -467,6 +522,7 @@
    "outputs": [],
    "source": [
     "# Upload Processed Data to Cloud Bucket\n",
+    "BUCKET_NAME = \"fieldwork_processed\"  \n",
     "CLOUD_PROCESSED_PREFIX = (\n",
     "    \"your-cloud-processed-prefix\"  # Update with your processed data prefix\n",
     ")\n",
