updates for lint

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -44,11 +44,11 @@
     "from collab_env.tracking.alignment_gui import align_videos\n",
     "from collab_env.tracking.model.local_model_inference import infer_with_yolo\n",
     "from collab_env.tracking.model.local_model_tracking import (\n",
+    "    output_tracked_bboxes_csv,\n",
     "    overlay_tracks_on_video,\n",
+    "    plot_tracks_at_frame_bbox_from_video,\n",
     "    run_tracking,\n",
     "    visualize_detections_from_video,\n",
-    "    output_tracked_bboxes_csv,\n",
-    "    plot_tracks_at_frame_bbox_from_video\n",
     ")\n",
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
@@ -159,7 +159,7 @@
    "source": [
     "# Download Data from Cloud Bucket\n",
     "SESSION_FOLDER = \"2024_02_06-session_0001\"  # Update with data folder (session)\n",
-    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\" \n",
+    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"\n",
     "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")\n",
     "\n",
     "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\", get_project_root())\n",
@@ -387,7 +387,7 @@
     "        / f\"cropped_rgb_adjusted.mp4\"\n",
     "    )\n",
     "\n",
-    "        # Run local_model_inference script\n",
+    "    # Run local_model_inference script\n",
     "    try:\n",
     "        detect_csv = (\n",
     "            LOCAL_PROCESSED_DIR\n",
@@ -401,16 +401,21 @@
     "            / f\"thermal_{camera}\"\n",
     "            / \"annotated_warped_thermal.mp4\"\n",
     "        )\n",
-    "        checkpoint_path = LOCAL_DOWNLOAD_DIR / \"yolo11_weights.pt\"  # Update with your model path\n",
+    "        checkpoint_path = (\n",
+    "            LOCAL_DOWNLOAD_DIR / \"yolo11_weights.pt\"\n",
+    "        )  # Update with your model path\n",
     "\n",
     "        infer_with_yolo(\n",
-    "            video_path=thermal_video_path, model_path=checkpoint_path, output_csv_path=detect_csv\n",
+    "            video_path=thermal_video_path,\n",
+    "            model_path=checkpoint_path,\n",
+    "            output_csv_path=detect_csv,\n",
     "        )\n",
-    "        print(f\"Object detection completed for camera {camera}. Results saved to {detect_csv}.\")\n",
+    "        print(\n",
+    "            f\"Object detection completed for camera {camera}. Results saved to {detect_csv}.\"\n",
+    "        )\n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
-    "        continue\n",
-    "\n"
+    "        continue"
    ]
   },
   {
@@ -420,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#running tracking\n",
+    "# running tracking\n",
     "for camera in camera_numbers:\n",
     "\n",
     "    # Define paths for the thermal video and model inference\n",
@@ -475,8 +480,8 @@
     "    )\n",
     "    # Run tracking\n",
     "    print(f\"Running tracking on: camera {camera}\")\n",
-    "    run_tracking(LOCAL_PROCESSED_DIR/'aligned_frames', \"thermal\", camera)\n",
-    "    run_tracking(LOCAL_PROCESSED_DIR/'aligned_frames', \"rgb\", camera)\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR / \"aligned_frames\", \"thermal\", camera)\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR / \"aligned_frames\", \"rgb\", camera)\n",
     "    tracked_csv = (\n",
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
@@ -488,10 +493,14 @@
     "        continue\n",
     "    # Output tracked bounding boxes to CSV\n",
     "    output_tracked_bboxes_csv(\n",
-    "    track_csv=tracked_csv,\n",
-    "    detect_csv=detect_csv,\n",
-    "    output_csv=Path(LOCAL_PROCESSED_DIR / f\"aligned_frames/rgb_{camera}/tracked_bboxes_{camera}.csv\"),\n",
-    "    iou_threshold=0.2 ) # Lower threshold if tracks are not centered\n",
+    "        track_csv=tracked_csv,\n",
+    "        detect_csv=detect_csv,\n",
+    "        output_csv=Path(\n",
+    "            LOCAL_PROCESSED_DIR\n",
+    "            / f\"aligned_frames/rgb_{camera}/tracked_bboxes_{camera}.csv\"\n",
+    "        ),\n",
+    "        iou_threshold=0.2,\n",
+    "    )  # Lower threshold if tracks are not centered\n",
     "    print(f\"Visualizing tracks for rgb camera {camera}...\")\n",
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
@@ -503,7 +512,7 @@
     "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
     "        / f\"overlayed_tracks_{camera}.mp4\",\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -522,7 +531,7 @@
    "outputs": [],
    "source": [
     "# Upload Processed Data to Cloud Bucket\n",
-    "BUCKET_NAME = \"fieldwork_processed\"  \n",
+    "BUCKET_NAME = \"fieldwork_processed\"\n",
     "CLOUD_PROCESSED_PREFIX = (\n",
     "    \"your-cloud-processed-prefix\"  # Update with your processed data prefix\n",
     ")\n",
