--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aea59180",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,6 @@
     "from collab_env.tracking.model.local_model_tracking import (\n",
     "    output_tracked_bboxes_csv,\n",
     "    overlay_tracks_on_video,\n",
-    "    plot_tracks_at_frame_bbox_from_video,\n",
     "    run_tracking,\n",
     "    visualize_detections_from_video,\n",
     ")\n",
@@ -499,8 +498,9 @@
     "            LOCAL_PROCESSED_DIR\n",
     "            / f\"aligned_frames/rgb_{camera}/tracked_bboxes_{camera}.csv\"\n",
     "        ),\n",
-    "        iou_threshold=0.2,\n",
+    "        iou_threshold=0.1,\n",
     "    )  # Lower threshold if tracks are not centered\n",
+    "\n",
     "    print(f\"Visualizing tracks for rgb camera {camera}...\")\n",
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
@@ -545,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab-env",
+   "display_name": "yolo",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
