ideally final lint fix

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -373,7 +373,7 @@
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"warped_thermal_adjusted.mp4\"\n",
+    "        / \"warped_thermal_adjusted.mp4\"\n",
     "    )\n",
     "    if not thermal_video_path.exists():\n",
     "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
@@ -383,7 +383,7 @@
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
-    "        / f\"cropped_rgb_adjusted.mp4\"\n",
+    "        / \"cropped_rgb_adjusted.mp4\"\n",
     "    )\n",
     "\n",
     "    # Run local_model_inference script\n",
@@ -432,7 +432,7 @@
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"warped_thermal_adjusted.mp4\"\n",
+    "        / \"warped_thermal_adjusted.mp4\"\n",
     "    )\n",
     "    if not thermal_video_path.exists():\n",
     "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
@@ -442,7 +442,7 @@
     "        LOCAL_PROCESSED_DIR\n",
     "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
-    "        / f\"cropped_rgb_adjusted.mp4\"\n",
+    "        / \"cropped_rgb_adjusted.mp4\"\n",
     "    )\n",
     "    if not rgb_video_path.exists():\n",
     "        print(f\"RGB video not found for camera {camera}. Skipping...\")\n",
