updated documentation and visualization (#21)
* updates to local inference

* Update alignment_gui.py

* update tracking visualization

* Update local_model_inference.py

* added the online visualization for inference

* consolidated readme

* update to fix lint issue

* updates for lint

* try to fix lint again

* ideally final lint fix

---------

Co-authored-by: Dmitry Batenkov <dima.batenkov@gmail.com>

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Full Tracker: Download, Process, and Upload Data\n",
-    "This notebook demonstrates the full pipeline for handling raw data:\n",
+    "This notebook demonstrates the full pipeline for handling raw rgb. and .csq data:\n",
     "1. Download data from a cloud bucket.\n",
     "2. Process the data (e.g., align videos, run detection, and tracking).\n",
     "3. Upload the processed data back to the cloud bucket."
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aea59180",
    "metadata": {},
    "outputs": [],
@@ -42,8 +42,9 @@
     "\n",
     "# Import Custom Scripts\n",
     "from collab_env.tracking.alignment_gui import align_videos\n",
-    "from collab_env.tracking.model.local_model_inference import process_video_with_rfdetr\n",
+    "from collab_env.tracking.model.local_model_inference import infer_with_yolo\n",
     "from collab_env.tracking.model.local_model_tracking import (\n",
+    "    output_tracked_bboxes_csv,\n",
     "    overlay_tracks_on_video,\n",
     "    run_tracking,\n",
     "    visualize_detections_from_video,\n",
@@ -156,8 +157,8 @@
    "outputs": [],
    "source": [
     "# Download Data from Cloud Bucket\n",
-    "SESSION_FOLDER = \"2024_02_06-session_0001\"\n",
-    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"  # Update with data folder (session)\n",
+    "SESSION_FOLDER = \"2024_02_06-session_0001\"  # Update with data folder (session)\n",
+    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"\n",
     "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")\n",
     "\n",
     "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\", get_project_root())\n",
@@ -286,7 +287,7 @@
     "# default parameters for alignment\n",
     "\n",
     "frame_size = (640, 480)  # Default frame size\n",
-    "max_frames = 10  # Process all frames by default\n",
+    "max_frames = None  # Process all frames by default\n",
     "warp_to = \"rgb\"  # Default warp to rgb, thermal is changing, not rgb\n",
     "rotation_angle = 0.0  # Default rotation angle\n",
     "skip_homography = False  # Default to not skip homography\n",
@@ -352,7 +353,7 @@
    "id": "0233241c",
    "metadata": {},
    "source": [
-    "#### Object detection and alignment"
+    "#### Object detection and tracking"
    ]
   },
   {
@@ -363,77 +364,152 @@
    "outputs": [],
    "source": [
     "# Detection and tracking\n",
-    "print(\"Running detection and tracking...\")\n",
+    "print(\"Running detection...\")\n",
     "for camera in camera_numbers:\n",
     "    print(f\"Running detection and tracking on: thermal_{camera}\")\n",
     "\n",
     "    # Define paths for the thermal video and model inference\n",
     "    thermal_video_path = (\n",
     "        LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"thermal_{camera}\"\n",
-    "        / f\"warped_thermal_{camera}.mp4\"\n",
+    "        / \"warped_thermal_adjusted.mp4\"\n",
     "    )\n",
     "    if not thermal_video_path.exists():\n",
     "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
     "        continue\n",
     "\n",
+    "    rgb_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / \"cropped_rgb_adjusted.mp4\"\n",
+    "    )\n",
+    "\n",
     "    # Run local_model_inference script\n",
     "    try:\n",
-    "        output_csv_path = (\n",
-    "            LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / \"output_results.csv\"\n",
+    "        detect_csv = (\n",
+    "            LOCAL_PROCESSED_DIR\n",
+    "            / \"aligned_frames\"\n",
+    "            / f\"thermal_{camera}\"\n",
+    "            / f\"detections_{camera}.csv\"\n",
     "        )\n",
     "        output_video_path = (\n",
     "            LOCAL_PROCESSED_DIR\n",
-    "            / \"aligned\"\n",
+    "            / \"aligned_frames\"\n",
     "            / f\"thermal_{camera}\"\n",
     "            / \"annotated_warped_thermal.mp4\"\n",
     "        )\n",
-    "        checkpoint_path = \"scripts/model/weights.pt\"\n",
+    "        checkpoint_path = (\n",
+    "            LOCAL_DOWNLOAD_DIR / \"yolo11_weights.pt\"\n",
+    "        )  # Update with your model path\n",
     "\n",
-    "        process_video_with_rfdetr(\n",
+    "        infer_with_yolo(\n",
     "            video_path=thermal_video_path,\n",
-    "            output_csv_path=output_csv_path,\n",
-    "            output_video_path=output_video_path,\n",
-    "            checkpoint_path=checkpoint_path,\n",
-    "            confidence=0.5,\n",
+    "            model_path=checkpoint_path,\n",
+    "            output_csv_path=detect_csv,\n",
+    "        )\n",
+    "        print(\n",
+    "            f\"Object detection completed for camera {camera}. Results saved to {detect_csv}.\"\n",
     "        )\n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71153357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# running tracking\n",
+    "for camera in camera_numbers:\n",
+    "\n",
+    "    # Define paths for the thermal video and model inference\n",
+    "    thermal_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / \"warped_thermal_adjusted.mp4\"\n",
+    "    )\n",
+    "    if not thermal_video_path.exists():\n",
+    "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
     "        continue\n",
     "\n",
-    "    # Run tracking\n",
-    "    print(f\"Running tracking on: thermal_{camera}\")\n",
-    "    run_tracking(LOCAL_PROCESSED_DIR, \"thermal\", camera)\n",
+    "    rgb_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / \"cropped_rgb_adjusted.mp4\"\n",
+    "    )\n",
+    "    if not rgb_video_path.exists():\n",
+    "        print(f\"RGB video not found for camera {camera}. Skipping...\")\n",
+    "        continue\n",
     "\n",
+    "    # Check if the detection CSV exists\n",
+    "    detect_csv = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"detections_{camera}.csv\"\n",
+    "    )\n",
+    "    if not detect_csv.exists():\n",
+    "        print(f\"Detection CSV not found for camera {camera}. Skipping tracking.\")\n",
+    "        continue\n",
+    "    # Visualize detections on the thermal and RGB videos\n",
+    "    # visualization\n",
+    "    visualize_detections_from_video(\n",
+    "        csv_path=detect_csv,\n",
+    "        video_path=thermal_video_path,\n",
+    "        output_video_path=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"visualized_thermal_{camera}.mp4\",\n",
+    "    )\n",
+    "    # visualization\n",
+    "    visualize_detections_from_video(\n",
+    "        csv_path=detect_csv,\n",
+    "        video_path=rgb_video_path,\n",
+    "        output_video_path=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"visualized_rgb_{camera}.mp4\",\n",
+    "    )\n",
+    "    # Run tracking\n",
+    "    print(f\"Running tracking on: camera {camera}\")\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR / \"aligned_frames\", \"thermal\", camera)\n",
+    "    run_tracking(LOCAL_PROCESSED_DIR / \"aligned_frames\", \"rgb\", camera)\n",
     "    tracked_csv = (\n",
     "        LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
-    "        / f\"thermal_{camera}\"\n",
-    "        / f\"thermal_{camera}_tracks.csv\"\n",
+    "        / \"aligned_frames\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"rgb_{camera}_tracks.csv\"\n",
     "    )\n",
     "    if not tracked_csv.exists():\n",
     "        print(f\"Tracking CSV not found for camera {camera}. Skipping visualization.\")\n",
     "        continue\n",
+    "    # Output tracked bounding boxes to CSV\n",
+    "    output_tracked_bboxes_csv(\n",
+    "        track_csv=tracked_csv,\n",
+    "        detect_csv=detect_csv,\n",
+    "        output_csv=Path(\n",
+    "            LOCAL_PROCESSED_DIR\n",
+    "            / f\"aligned_frames/rgb_{camera}/tracked_bboxes_{camera}.csv\"\n",
+    "        ),\n",
+    "        iou_threshold=0.1,\n",
+    "    )  # Lower threshold if tracks are not centered\n",
     "\n",
-    "    # Visualization\n",
-    "    visualize_detections_from_video(\n",
-    "        csv_path=tracked_csv,\n",
-    "        video_path=thermal_video_path,\n",
-    "        output_video_path=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
-    "        / f\"thermal_{camera}\"\n",
-    "        / f\"visualized_thermal_{camera}.mp4\",\n",
-    "    )\n",
     "    print(f\"Visualizing tracks for rgb camera {camera}...\")\n",
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
     "        frame_dir=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
     "        / \"annotated_frames\",\n",
     "        output_video=LOCAL_PROCESSED_DIR\n",
-    "        / \"aligned\"\n",
+    "        / \"aligned_frames\"\n",
     "        / f\"rgb_{camera}\"\n",
     "        / f\"overlayed_tracks_{camera}.mp4\",\n",
     "    )"
@@ -444,7 +520,7 @@
    "id": "68872063",
    "metadata": {},
    "source": [
-    "### Push processed files"
+    "### Optional: Push processed files"
    ]
   },
   {
@@ -455,6 +531,7 @@
    "outputs": [],
    "source": [
     "# Upload Processed Data to Cloud Bucket\n",
+    "BUCKET_NAME = \"fieldwork_processed\"\n",
     "CLOUD_PROCESSED_PREFIX = (\n",
     "    \"your-cloud-processed-prefix\"  # Update with your processed data prefix\n",
     ")\n",
@@ -468,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab-env",
+   "display_name": "yolo",
    "language": "python",
    "name": "python3"
   },
@@ -482,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
