--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -44,14 +44,19 @@
     "from collab_env.tracking.alignment_gui import align_videos\n",
     "from collab_env.tracking.model.local_model_inference import infer_with_yolo\n",
     "from collab_env.tracking.model.local_model_tracking import (\n",
+    "    generate_thermal_masks_from_bboxes,\n",
+    "    get_detections_from_video,\n",
     "    output_tracked_bboxes_csv,\n",
-    "    overlay_tracks_on_video,\n",
     "    run_tracking,\n",
-    "    visualize_detections_from_video,\n",
     ")\n",
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
     "    validate_session_structure,\n",
+    ")\n",
+    "from collab_env.tracking.visualization import (\n",
+    "    export_tracks_with_masks,\n",
+    "    overlay_tracks_on_video,\n",
+    "    plot_tracks_at_frame_bbox_from_video,\n",
     ")"
    ]
   },
@@ -460,7 +465,7 @@
     "        continue\n",
     "    # Visualize detections on the thermal and RGB videos\n",
     "    # visualization\n",
-    "    visualize_detections_from_video(\n",
+    "    get_detections_from_video(\n",
     "        csv_path=detect_csv,\n",
     "        video_path=thermal_video_path,\n",
     "        output_video_path=LOCAL_PROCESSED_DIR\n",
@@ -469,7 +474,7 @@
     "        / f\"visualized_thermal_{camera}.mp4\",\n",
     "    )\n",
     "    # visualization\n",
-    "    visualize_detections_from_video(\n",
+    "    get_detections_from_video(\n",
     "        csv_path=detect_csv,\n",
     "        video_path=rgb_video_path,\n",
     "        output_video_path=LOCAL_PROCESSED_DIR\n",
@@ -513,6 +518,65 @@
     "        / f\"rgb_{camera}\"\n",
     "        / f\"overlayed_tracks_{camera}.mp4\",\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "084e4aff",
+   "metadata": {},
+   "source": [
+    "### Optional: Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da33c123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_number = 100  # Example frame number to visualize\n",
+    "camera = 1  # Example camera number to visualize\n",
+    "\n",
+    "print(f\"Plotting tracks at frame {frame_number} for camera {camera}...\")\n",
+    "plot_tracks_at_frame_bbox_from_video(\n",
+    "    tracked_bboxes_csv=tracked_csv,\n",
+    "    video_path=rgb_video_path,\n",
+    "    output_image=LOCAL_PROCESSED_DIR\n",
+    "    / \"aligned_frames\"\n",
+    "    / f\"rgb_{camera}\"\n",
+    "    / f\"tracked_bboxes_{camera}_{frame_number}.png\",\n",
+    "    frame_number=frame_number,\n",
+    "    max_frame=1000,\n",
+    ")\n",
+    "\n",
+    "# If possible, generate pixel masks within each bounding box\n",
+    "print(f\"Exporting tracks with masks for camera {camera}...\")\n",
+    "\n",
+    "generate_thermal_masks_from_bboxes(\n",
+    "    bbox_csv=LOCAL_PROCESSED_DIR\n",
+    "    / \"aligned_frames\"\n",
+    "    / f\"rgb_{camera}\"\n",
+    "    / f\"tracked_bboxes_{camera}.csv\",\n",
+    "    video_path=LOCAL_PROCESSED_DIR\n",
+    "    / \"aligned_frames\"\n",
+    "    / f\"thermal_{camera}\"\n",
+    "    / f\"warped_thermal_{camera}_adjusted.mp4\",\n",
+    "    output_mask_dir=LOCAL_PROCESSED_DIR\n",
+    "    / \"aligned_frames\"\n",
+    "    / f\"thermal_{camera}\"\n",
+    "    / \"masks\",\n",
+    "    temp_threshold=128,  # default threshold for thermal images, half of 255\n",
+    "    mask_value=255,\n",
+    ")\n",
+    "export_tracks_with_masks(\n",
+    "    tracked_bboxes_csv=tracked_csv,\n",
+    "    mask_dir=LOCAL_PROCESSED_DIR / \"aligned_frames\" / f\"rgb_{camera}\" / \"masks\",\n",
+    "    output_csv=LOCAL_PROCESSED_DIR\n",
+    "    / \"aligned_frames\"\n",
+    "    / f\"rgb_{camera}\"\n",
+    "    / f\"tracked_bboxes_{camera}_with_masks.csv\",\n",
+    ")"
    ]
   },
   {
