--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -545,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "yolo",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
