parquet save - will enable later

--- a/docs/alignment/reprojection.ipynb
+++ b/docs/alignment/reprojection.ipynb
@@ -483,7 +483,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "4963f46e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save as parquet - for future use\n",
+    "\n",
+    "# import pyarrow as pa\n",
+    "# import pyarrow.parquet as pq\n",
+    "\n",
+    "# pq.write_table(pa.Table.from_pandas(df_projected_tracks), session_data_dir  / f\"aligned_frames/{camera_id}/{camera_id}_tracked_centroids_3d.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4e965989",
    "metadata": {},
    "outputs": [
