update readme and add idtrackerasi functionality

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -331,8 +331,8 @@
     "    print(f\"RGB video path: {rgb_video_path}\")\n",
     "    print(f\"Thermal video path: {thermal_video_path}\")\n",
     "\n",
-    "    output_dir_rgb = LOCAL_PROCESSED_DIR / \"aligned\" / f\"rgb_{camera}\"\n",
-    "    output_dir_thm = LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\"\n",
+    "    output_dir_rgb = LOCAL_PROCESSED_DIR / \"aligned_frames\" / f\"rgb_{camera}\"\n",
+    "    output_dir_thm = LOCAL_PROCESSED_DIR / \"aligned_frames\" / f\"thermal_{camera}\"\n",
     "    output_dir_rgb.mkdir(parents=True, exist_ok=True)\n",
     "    output_dir_thm.mkdir(parents=True, exist_ok=True)\n",
     "\n",
